
	This file is in Unicode charset, with UTF-8 encoding.

	Sections headed '[Incompat <version>]' and '[Major <version>]'
	are particularly important.  They describe changes that are
	incompatible with earlier releases or are significantly
	different.

	!!!!!!!! READ THE RELEASE.NOTES !!!!!!!!

-------------------------------------------------------------------------------

	2019-06-21
	* Plugged more memory leaks (one-shot leaks in bogoutil/bogotune).
	* RPMs or scripts for static library builds have been removed.
	  Bogofilter no longer supports systems that are too far out of date.
	  This removes .spec files from the package (for now, it is still
	  built during ./configure), disables "make rpm", and drops the
	  install-staticdblibs.sh script, and removes "--enable-static"
	  support from ./configure.

	2019-05-19
	* Bogofilter's source code repository has been converted to Git,
	  and is hosted on GitLab and mirrored onto SourceForge.net.

	2018-07-19
	* Support for using LMDB (Lightning Memory-Mapped Database Manager)
	  as the database back-end. Suggested, courteously implemented and
	  contributed by Steffen Nurpmeso, steffen .at. sdaoden.eu.

	2018-07-17
	* The Berkeley DB backend driver forgoes DB_NOSYNC in transactional
	  mode, so as to synchronize changes from the logs back into the .db
	  files to keep them up to date and make environments more robust
	  against a loss of log.* files, for instance, when moving databases.

	2017-09-18
	* The contrib/spamitarium.pl, originally written by Thomas 'Tom'
	  Anderson, was enhanced by Jonathan Kamens and grew a few features.
	  Run perldoc contrib/spamitarium.pl, or spamitarium.pl -h, to read
	  its manual.

	2016-01-26
	* Apply patch from Denny Lin, with one fix, to add support for the
	  KyotoCabinet embedded database library.  To enable, install
	  KyotoCabinet including the development files, and run
	  configure --with-database=kyotocabinet when building bogofilter.
	  Thanks!
