@@ -337,7 +337,8 @@ ex_t db_foreach(void *vhandle, db_foreach_t hook, void *userdata)
     TCBDB *dbp = handle->dbp;
     BDBCUR *cursor;
 
-    dbv_t dbv_key, dbv_data;
+    dbv_t dbv_key;
+    dbv_const_t dbv_data;
     int ksiz, dsiz;
     char *key, *data;
 
